# CompRend

./: .clang-format  .gitignore  2  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  runner.run
.cache/clangd/index/: Window.cpp.39927522CCB883C8.idx  Window.h.D78A7A15D9F03D54.idx  lapi.c.1A0B9B820FB62F3D.idx  lapi.c.BC05510BFC9E7429.idx  lapi.h.8AF9FAB539CC95E1.idx  lapi.h.FA302B65841C336D.idx  lauxlib.c.1CE4A9075E44DD63.idx  lauxlib.c.400F4159D6C3A137.idx  lauxlib.h.252AD233B7FFFD38.idx  lauxlib.h.293F8CD3E99FDA20.idx  lbaselib.c.3B021F4B12112934.idx  lbaselib.c.57A6F72CE6211BE8.idx  lcode.c.901760B9B0393577.idx  lcode.c.93F941485D46AE7F.idx  lcode.h.8365FFC4E7ACCB4F.idx  lcode.h.9E4BFA4CD42F675B.idx  lcorolib.c.8FF6E4F5D3500223.idx  lcorolib.c.ADF138CE3FF33A6F.idx  lctype.c.9CE7C1549E2E3435.idx  lctype.c.BA9A6B4BFBEB971E.idx  lctype.h.3F35A16997A58708.idx  lctype.h.D7061E4B600E53F7.idx  ldblib.c.0D505EA878FD2832.idx  ldblib.c.811CAF53454603E8.idx  ldebug.c.35987F883D077A8C.idx  ldebug.c.6BC36ECEC5371C52.idx  ldebug.h.6E84C6395AEB5CE0.idx  ldebug.h.98E71D3722D8641A.idx  ldo.c.5D00900001F60B22.idx  ldo.c.F32F2A9EE363F04B.idx  ldo.h.D91FA6066B374E0A.idx  ldo.h.DA1624B13F438222.idx  ldump.c.AD49FE033B3C2B45.idx  ldump.c.DA64CC53A5359558.idx  lfunc.c.44D787A423B7F63D.idx  lfunc.c.F7AF064D9B297CE3.idx  lfunc.h.0ABDE315C3BDE0D2.idx  lfunc.h.DDAA5E1B01FB1D52.idx  lgc.c.002105A58E583B70.idx  lgc.c.910F2B8A3C6DC52F.idx  (+80 more)
TestLua/: foo.lua
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/lua-5.4.7/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/LuaFunctions/: Window.cpp  Window.h
src/Rendering/: Csprite.cpp  Csprite.h  Entity.cpp  Entity.h  Rendering.cpp  Rendering.h  Scene.cpp  Scene.h  Shader.h  c_partical.cpp  c_partical.h  lua_Rendering.cpp  lua_Rendering.h  lua_Wrapers.cpp  lua_Wrapers.h
src/Window/: Window.cpp  Window.h  window_lua.cpp  window_lua.h
